svc-python.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python
  name: svc-python
  namespace: python
spec:
  ports:
  - nodePort: 30001
    port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: python
  type: NodePort
